# SPLN2324

TPC2/: README.md  parseWords.py  pyproject.toml
TPC2/word_freq/: __init__.py  parseWords.py
TPC3/: README.md  pyproject.toml
TPC3/template_maker/: __init__.py  templates.py
amigos/: README.md  pyproject.toml
amigos/friends/: __init__.py  friends.py
