[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "template_maker"
authors = [
    {name = "Lumafepe", email = "pg54009@alunos.uminho.pt"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "jjcli",
    "Jinja2"
]

[project.scripts]
templateMaker = "template_maker:main"